<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center">

    <com.mik0war.complimentsApp.presentation.CustomTextView
        android:id="@+id/commonDataTextView"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:padding="@dimen/padding_16dp"
        android:textAlignment="center"
        android:layout_gravity="center"
        tools:text="Data"/>

    <com.mik0war.complimentsApp.presentation.CustomImageButton
        android:id="@+id/change_button"
        android:padding="@dimen/padding_16dp"
        android:layout_width="wrap_content"
        android:tint="@color/purple_700"
        android:background="?selectableItemBackground"
        android:layout_height="wrap_content"
        android:contentDescription="@string/favorite_icon"
        android:src="@drawable/favorite_fill" />
</LinearLayout>